--- a/.env
+++ b/.env
@@ -27,3 +27,9 @@ APP_SECRET=add3d1e46570b593ff23944965c28b21
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 DATABASE_URL=mysql://root:@127.0.0.1:3306/apibilemo
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=0cdab505ed24b39a7d9eb614b59cb739
+###< lexik/jwt-authentication-bundle ###
