--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,7 +1,9 @@
-# config/packages/nelmio_api_doc.yaml
 nelmio_api_doc:
-  areas:
-    path_patterns: # an array of regexps
-    - ^/api(?!/doc$)
-    host_patterns:
-    - ^api\.
+  documentation:
+    info:
+      title: Bilemo
+      description: Bilemo mobile phones API.
+      version: 2.0.0
+  areas: # to filter documented areas
+    path_patterns:
+    - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
